# restshop

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  basic.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  test_main.py  web.config
.github/workflows/: test-shop-rest.yml
binaries/: readme.txt
core/: interface.py  schemas.py  sessions.py
dockerfiles/shop/: Dockerfile
examples/: basic.py  basic_rest.py
log_consumer/: main.py
restshop/: __init__.py  schemas.py
tests/: conftest.py  test_basic_rest.py  test_main.py
